Sat Feb 15 17:31:52 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/factoring.gel: increase the Factorize maximum
	  since we don't have any fun factoring algs so the trials is the
	  only thing we do.  Plus it's relatively fast.

Fri Feb 14 17:46:19 2003  George Lebl <jirka@5z.com>

	* doc/manual.txt: update

	* configure.in: raise version

Fri Feb 14 17:27:02 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch], src/calc.c, src/parse.y, src/lexer.l: Better
	  printing of complex numbers still, add mode for (<expr>)i which
	  makes the expr imaginary (multiply by i really), and use this
	  for printing imaginary mixed fractions to look better.  Also
	  don't print parenthesis on toplevel complex numbers to look nicer
	  and pretty print now does toplevel.  Also don't toplevel on
	  printing a polynomial and when in toplevel mode don't
	  print whole numbers since that's the whole point of FullExpressions

	* src/eval.c: fix crash on setting parameters if there is an
	  exception

	* doc/manual.txt: update

Fri Feb 14 16:10:30 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/*.gel: add MaximalPrimePowerFactors,
	  PrimeFactors, fix Factors and add CombineFactorizations,
	  also make a better implementation of EulerPhi using Factorize,
	  which is a LOT faster then our previous braindead one.

	* src/util.[ch]: fixup the my_realloc to just use g_realloc. and
	  other minor cleanups

	* src/mpwrap.[ch], src/lexer.l, calc.c, compil.c: rework printing of
	  complex numbers, add latex/troff mode for fractions.  Allow
	  rational/integer complex numbers.  Add fixmes for den/num
	  functions for complex numbers.  For pure imaginary numbers just
	  print the imaginary part without parentheses.

	* src/geniustests.txt, src/geniustest.pl: add more tests, update
	  for changes and printout error inputs if any at the end

	* doc/manual.txt: update for the complex numbers

	* src/parse.y: ':' now binds less then the standard arithmetic