@@ -509,3 +509,8 @@ EulerPhi(365)							288
 EulerPhi(15)							8
 EulerPhi(13)							12
 EulerPhi(-4)							(EulerPhi(-4))
+464104705^201934721 mod 536813567				45005201
+Numerator (3i/7)						3i
+Numerator (3i/7+1)						7+3i
+Denominator (3i/7)						7
+Denominator (3i/7+1)						7
