@@ -1,3 +1,10 @@
+Sun Feb 16 11:06:50 2003  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.[ch], src/eval.c, lib/number_theory/misc.gel:
+	  use the powm function for power mod to make the modulo arithmetic
+	  actually more useful.  Also implement numerator and denominator
+	  for complex rational values.
+
 Sat Feb 15 17:31:52 2003  George Lebl <jirka@5z.com>
 
 	* lib/number_theory/factoring.gel: increase the Factorize maximum
